--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forms",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/babel-plugin-jsx": "^1.0.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "sass": "^1.32.8",
     "vite": "^2.0.1"
   }
 }
