--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.6.0",
     "prettier": "^2.2.1",
+    "prettier-vue": "^1.1.2",
     "vue": "^3.0.5"
   },
   "devDependencies": {
